# prelucrareaimaginilor-proiect-defaultteam1

./: .gitignore  Copy_of_Colab_+_PyThorch_+_TensorFlow.ipynb
src/: BasicImageProcessingStep.qml  CMakeLists.txt  ImageProcessingStep.qml  Image_Processing.cpp  Image_Processing.h  Image_Processing_Cfg.h  Tools.cpp  Tools.h  binarizationstep.cpp  binarizationstep.h  blurstep.cpp  blurstep.h  customimage.cpp  customimage.h  diagnosisresult.h  image_functions.py  imageprocessinglist.cpp  imageprocessinglist.h  imageprocessingstep.cpp  imageprocessingstep.h  imageprocessingstepvalue.cpp  imageprocessingstepvalue.h  imageprocessor.cpp  imageprocessor.h  imageprovider.cpp  imageprovider.h  luminositystep.cpp  luminositystep.h  main.cpp  main.qml  morphologicalstep.cpp  morphologicalstep.h  noisereductionstep.cpp  noisereductionstep.h  normalizationstep.cpp  normalizationstep.h  windowbinarizationstep.cpp  windowbinarizationstep.h
